--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
               run: pip install codespell
 
             - name: Use codespell
-              run: make spell
+              run: codespell --quiet-level=2 --check-hidden --skip=./.git,./CHANGELOG.md
 
     generate-doc:
         runs-on: ubuntu-latest
@@ -59,9 +59,28 @@ jobs:
               with:
                   commit_message: "docs: auto-generate vimdoc"
 
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+
+            - name: Install Neovim
+              run: |
+                  mkdir -p /tmp/nvim
+                  wget -q https://github.com/neovim/neovim/releases/download/nightly/nvim.appimage -O /tmp/nvim/nvim.appimage
+                  cd /tmp/nvim
+                  chmod a+x ./nvim.appimage
+                  ./nvim.appimage --appimage-extract
+                  echo "/tmp/nvim/squashfs-root/usr/bin/" >> $GITHUB_PATH
+
+            - name: Run Tests
+              run: |
+                  nvim --version
+                  nvim --headless -u tests/init.lua -c "PlenaryBustedDirectory tests/ {minimal_init = 'tests/init.lua', sequential = true}"
+
     release:
         runs-on: ubuntu-latest
-        needs: [stylua, selene, codespell, generate-doc]
+        needs: [stylua, selene, codespell, generate-doc, test]
         if: github.ref == 'refs/heads/main'
         steps:
             - uses: googleapis/release-please-action@v4
