--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,16 +63,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-
-            - name: Install Neovim
-              run: |
-                  mkdir -p /tmp/nvim
-                  wget -q https://github.com/neovim/neovim/releases/download/nightly/nvim.appimage -O /tmp/nvim/nvim.appimage
-                  cd /tmp/nvim
-                  chmod a+x ./nvim.appimage
-                  ./nvim.appimage --appimage-extract
-                  echo "/tmp/nvim/squashfs-root/usr/bin/" >> $GITHUB_PATH
-
+            - uses: folke/github/neovim@main
             - name: Run Tests
               run: |
                   nvim --version
